[0.9.10] - Fixed the cron programs, they where out of date in the table structures

[0.9.9] - Fixed a number of issues with the verdilak layout
        - Fixed parse_footer() not working if the header is turned off.
        - Fixed table problem in E-Mail
        - Added user preferences for template set
        - Disabled frames until we can properly fix them
        - Added new template set (just web)
          Thanks Shawn J. Wallace
        - Created in mini-calendar for the verdilak layout
        - XHTML 4.01 compliance
        - Fixed all user preferences (within that user) getting overwritten when any app makes
          a change to them.
        - Fixed E-Mail display inline graphics
        - Fixed free/busy displaying incorrect title date
        - Fixed templates messing up with certian languages
        - Fixed E-Mail addressbook not working
        - Cleaned up the E-Mail mini box on main screen
        - Fixed a number of the icons not showing up

[0.9.8] - Merged in patch for UW-Maildir IMAP server support
          Thanks milosch
        - Fixed setup not detecting installed databases with PHP 3
        - Fixed repeating entries being saved properly.
        - Added ability for admin to edit any calendar event.
        - Fixed entries showing improperly on wrong date.
        - Fixed file uploads through filemanager.
        - Fixed repeating entries Month select box.
        - Fixed calendar week selector starting on Monday on footer.
        - Fixed buggy calendar saving when no groups are selected with group access.
        - Fixed submitting of calendar entry when javascript turned off.
        - Fixed calendar preferences not updating properly
        - Fixed denylogin form not display and converted it to a template.
        - Added select box option for multiable domains in login.php
        - Fixed proxy server support for headlines and check for new version on main screen.