@@ -1,4 +1,7 @@
 [0.9.10] - Fixed the cron programs, they where out of date in the table structures
+	- Added the ["flags"]["nofooter"] . ["flags"]["noappfooter"] flags.
+	- Fixed calendars in Printer Friendly mode.
+	- Fixed calendar day-view with events spanning multiple hours.
 
 [0.9.9] - Fixed a number of issues with the verdilak layout
         - Fixed parse_footer() not working if the header is turned off.
